--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
 services:
-  # database:
-  #   image: timescale/timescaledb-ha:pg17
-  #   restart: unless-stopped
-  #   environment:
-  #     POSTGRES_USER: "${DATABASE_USER}"
-  #     POSTGRES_PASSWORD: "${DATABASE_PASSWORD}"
-  #     POSTGRES_DB: "${DATABASE_NAME}"
-  #     TZ: "UTC"
-  #   ports:
-  #     - "${DOCKER_DATABASE_PORT}:5432"
-  #   volumes:
-  #     - ./.docker/timescaledb_data:/var/lib/postgresql/data
+  database:
+    image: timescale/timescaledb-ha:pg17
+    restart: unless-stopped
+    environment:
+      POSTGRES_USER: "${DATABASE_USER}"
+      POSTGRES_PASSWORD: "${DATABASE_PASSWORD}"
+      POSTGRES_DB: "${DATABASE_NAME}"
+      TZ: "UTC"
+    ports:
+      - "${DOCKER_DATABASE_PORT}:5432"
+    volumes:
+      - ./.docker/timescaledb_data:/var/lib/postgresql/data
 
   redis:
     image: redis:7
