added go microservices

--- a/apps/go-service/package.json
+++ b/apps/go-service/package.json
@@ -2,6 +2,6 @@
   "name": "go-service",
   "scripts": {
     "dev": "go build -o dist/main.go . && go run .",
-    "build": "go build -o dist/main.go"
+    "build": "go build -o dist/main.go ."
   }
 }
